# openmodel

./: Cargo.toml  README.md  all_geometry.json  collection.json  geometry_data.json  point.json  sample_geometry.json  star_mesh.json  test_nesting.rs
shaders/: fragment.glsl  vertex.glsl
src/: lib.rs  macros.rs  main.rs  point.rs  vector.rs
src/common/: data.rs  json_serialization.rs  mod.rs  universal_json.rs
src/geometry/: arrow.rs  cloud.rs  color.rs  frame.rs  geometry_object.rs  line.rs  linecloud.rs  matrix.rs  mesh.rs  mod.rs  pipe.rs  plane.rs  pline.rs  point.rs  pointcloud.rs  vector.rs  xform.rs
src/primitives/: color.rs  mod.rs  point.rs  quaternion.rs  vector.rs  xform.rs
tests/: concave_mesh_test.rs  earclip_triangulation_test.rs  json_geometry_test.rs  line_visualization_test.rs  mesh_edge_extraction_test.rs  mesh_modelmesh_compat.rs  pline_pipe_test.rs  polygon_mesh_test.rs  test_data.rs  test_point.rs  test_vector.rs
