[package]
name = "openmodel"
version = "0.1.0"
edition = "2021"
authors = ["Petras Vestartas petrasvestartas@gmail.com>"]
description = "Geometry library for structures."
license = "MIT"
repository = "https://github.com/petrasvestartas/openmodel"
homepage = "https://vestartas.com/"
documentation = "https://docs.rs/openmodel"
readme = "README.md"
keywords = ["statics", "structures", "geometry"]
categories = ["algorithms", "data-structures"]

[dependencies]
# Serde is used for serializing and deserializing Rust data structures.
# Serde JSON is an extension of Serde specifically for working with JSON data.
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

# UUID is used for generating and handling universally unique identifiers (UUIDs). 
# The "v4" feature enables version 4 UUIDs, and "serde" integrates with Serde for serialization/deserialization.
uuid = { version = "1.0", features = ["v4", "serde"] }

# WGPU
# Winit is used for creating windows and handling input events.
# Env_logger is a logger that reads log configuration from environment variables.
# Log provides a logging facade.
# WGPU is a high-performance, cross-platform graphics API for rendering and computation.
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"



[lib]
name = "openmodel"
path = "src/lib.rs"

[[bin]]
name = "openmodel_bin"
path = "src/main.rs"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
